--- a/Demo 8 Basic Sequencing/GSPA_Demo.html
+++ b/Demo 8 Basic Sequencing/GSPA_Demo.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-   <title>GSAP Demo 2</title>
+   <title>GSAP Demo 6</title>
    <meta charset="utf-8" />
    <meta name="author" content="Eduardo Castillo Fong" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,16 +13,10 @@
 </head>
 
 <body>
-   <h2 class="title">Multiple 2D and 3D transforms</h2>
+   <h2 class="title">Basic Sequencing</h2>
    <div class="box green"></div>
    <div class="box orange"></div>
    <div class="box grey"></div>
-   <div class="box pink"></div>
-   <div class="box green"></div>
-   <div class="box orange"></div>
-   <div class="box grey"></div>
-   <div class="box pink"></div>
-   <p>Click a box to transition out</p>
 
    <script src="JavaScript.js"></script>
 </body>
